# hl7v2-rs

./: .clippy.toml  .envrc  .gitattributes  .gitignore  .spectral.yml  .tokeignore  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  Makefile.toml  NIX_USAGE.md  README.md  RELEASE_PROCESS.md  ROADMAP.md  SECURITY.md  SESSION_SUMMARY.md  SYSTEMATIC_BUILD_PLAN.md  TESTING.md  THIRD_PARTY_NOTICES.md  clippy.toml  create_mllp.rs  create_mllp_test.rs  create_test_file.rs  debug_norm.rs  deny.toml  fix_clippy.py  fix_utf8.rs  flake.nix  justfile  minimal_test.hl7  proper_test.hl7  test.hl7  test_message.hl7  (+4 more)
crates/hl7v2/: Cargo.toml  README.md
crates/hl7v2-ack/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-ack/src/: lib.rs  tests.rs
crates/hl7v2-ack/tests/: integration_tests.rs  property_tests.rs
crates/hl7v2-batch/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-batch/src/: lib.rs  tests.rs
crates/hl7v2-batch/tests/: integration_tests.rs  property_tests.rs
crates/hl7v2-bench/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-bench/benches/: batch.rs  escape.rs  json.rs  memory.rs  mllp.rs  network.rs  parsing.rs  template.rs  validation.rs
crates/hl7v2-cli/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-cli/features/: cli.feature
crates/hl7v2-cli/src/: create_test_file.rs  create_utf8_test.rs  main.rs  monitor.rs  monitor_tests.rs  serve.rs  tests.rs
crates/hl7v2-cli/tests/: bdd_tests.rs  bdd_tests.rs.backup  integration_tests.rs
crates/hl7v2-core/: CLAUDE.md  Cargo.toml  README.md  test_output.txt
crates/hl7v2-core/benches/: clean_text.rs  escape.rs  memory.rs  mllp.rs  parsing.rs
crates/hl7v2-core/features/: escape.feature  mllp.feature  parsing.feature
crates/hl7v2-core/src/: delims.rs  error.rs  event.rs  json.rs  lib.rs  model.rs  network.rs  normalize.rs  parse.rs  path.rs  stream.rs  tests.rs  write.rs
crates/hl7v2-core/tests/: bdd_tests.rs  property_tests.rs
crates/hl7v2-corpus/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-corpus/src/: lib.rs  tests.rs
crates/hl7v2-corpus/tests/: integration_tests.rs  property_tests.rs
crates/hl7v2-datatype/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-datatype/src/: lib.rs  tests.rs
crates/hl7v2-datatype/tests/: integration_tests.rs  property_tests.rs
crates/hl7v2-datetime/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-datetime/src/: lib.rs  tests.rs
crates/hl7v2-datetime/tests/: integration_tests.rs  property_tests.rs
crates/hl7v2-e2e-tests/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-escape/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-escape/src/: lib.rs  tests.rs
crates/hl7v2-escape/tests/: integration_tests.rs  property_tests.rs
crates/hl7v2-faker/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-faker/src/: lib.rs  tests.rs
crates/hl7v2-faker/tests/: integration_tests.rs  property_tests.rs
crates/hl7v2-gen/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-gen/features/: generation.feature
crates/hl7v2-gen/src/: ack.rs  corpus.rs  delimiters.rs  generate.rs  hash.rs  lib.rs  template.rs  tests.rs
crates/hl7v2-gen/tests/: bdd_tests.rs  integration_tests.rs  property_tests.rs
crates/hl7v2-mllp/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-mllp/src/: lib.rs  tests.rs
crates/hl7v2-mllp/tests/: integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
crates/hl7v2-model/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-model/src/: lib.rs  tests.rs
crates/hl7v2-model/tests/: integration_tests.rs
crates/hl7v2-network/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-network/fuzz/: Cargo.toml
crates/hl7v2-network/src/: client.rs  codec.rs  lib.rs  server.rs  tests.rs
crates/hl7v2-network/tests/: client_tests.rs  integration_tests.rs  server_tests.rs
crates/hl7v2-normalize/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-normalize/src/: lib.rs  tests.rs
crates/hl7v2-normalize/tests/: integration_tests.rs  property_tests.rs
crates/hl7v2-parser/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-parser/fuzz/: Cargo.toml
crates/hl7v2-parser/src/: lib.rs
crates/hl7v2-parser/tests/: integration_tests.rs  snapshot_tests.rs
crates/hl7v2-path/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-path/src/: lib.rs  tests.rs
crates/hl7v2-path/tests/: integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
crates/hl7v2-prof/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-prof/src/: debug_test.rs  expressions.rs  lib.rs  load.rs  loader.rs  merge.rs  model.rs  simple_test.rs  tests.rs  tests.rs.backup  tests.rs.bak  validate.rs
crates/hl7v2-prof/tests/: loader_tests.rs  property_tests.proptest-regressions  property_tests.rs  simple_test.rs
crates/hl7v2-query/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-query/src/: lib.rs  tests.rs
crates/hl7v2-query/tests/: integration_tests.rs  property_tests.rs
crates/hl7v2-server/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-server/features/: http_server.feature
crates/hl7v2-server/src/: handlers.rs  lib.rs  main.rs  metrics.rs  middleware.rs  models.rs  routes.rs  server.rs  state.rs
crates/hl7v2-server/tests/: README.md  auth_security.rs  auth_test.rs  bdd_tests.rs  body_limit_test.rs  error_handling_test.rs  health_endpoints_test.rs  middleware_test.rs  parse_endpoint_test.rs  root_endpoint_test.rs  security_auth_test.rs  security_check.rs  security_limits.rs  security_test.rs  security_tests.rs  validate_endpoint_test.rs
crates/hl7v2-stream/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-stream/benches/: streaming.rs
crates/hl7v2-stream/src/: lib.rs
crates/hl7v2-stream/tests/: integration_tests.rs  (+1 more)
crates/hl7v2-template/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-template-values/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-test-utils/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-validation/: CLAUDE.md  Cargo.toml  README.md
crates/hl7v2-writer/: CLAUDE.md  Cargo.toml  README.md
xtask/: Cargo.toml
xtask/src/: main.rs
(+237 files in other folders)
