[workspace]
members = [
    # Microcrates (SRP-focused)
    "crates/hl7v2-model",
    "crates/hl7v2-escape",
    "crates/hl7v2-mllp",
    "crates/hl7v2-query",
    "crates/hl7v2-parser",
    "crates/hl7v2-writer",
    "crates/hl7v2-json",
    "crates/hl7v2-normalize",
    "crates/hl7v2-datetime",
    "crates/hl7v2-datatype",
    "crates/hl7v2-path",
    "crates/hl7v2-batch",
    "crates/hl7v2-network",
    "crates/hl7v2-stream",
    "crates/hl7v2-validation",
    "crates/hl7v2-ack",
    "crates/hl7v2-faker",
    "crates/hl7v2-template",
    "crates/hl7v2-template-values",
    "crates/hl7v2-corpus",
    # Higher-level crates
    "crates/hl7v2-core",
    "crates/hl7v2-bench",
    "crates/hl7v2-prof",
    "crates/hl7v2-gen",
    "crates/hl7v2-cli",
    "crates/hl7v2-server",
    # Testing utilities
    "crates/hl7v2-test-utils",
    # End-to-end tests
    "crates/hl7v2-e2e-tests",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "1.2.0"
edition = "2024"
rust-version = "1.92"
authors = ["Steven Zimmerman, CPA <effortlesssteven@users.noreply.github.com>"]
description = "Modern Rust HL7v2 Processor"
license = "AGPL-3.0-or-later"
repository = "https://github.com/EffortlessMetrics/hl7v2-rs"
keywords = ["hl7", "healthcare", "parser", "validator"]
categories = ["parser-implementations", "encoding"]
homepage = "https://github.com/EffortlessMetrics/hl7v2-rs"
documentation = "https://docs.rs/hl7v2-core"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
anyhow = "1.0.102"
cargo_metadata = "0.23.1"
clap = { version = "4.5.60", features = ["derive"] }
uuid = { version = "1.21.0", features = ["v4"] }
axum = "0.8.8"
tower = "0.5.3"
tower-http = "0.6.8"
tokio = "1.50.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
tower_governor = "0.8.0"
chrono = "0.4.44"
rand = "0.10.0"
regex = "1.12.3"
sha2 = "0.10.9"
futures = "0.3.32"
bytes = "1.11.1"
tokio-util = "0.7.18"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }

# Example dependencies (workspace examples)
[package]
name = "hl7v2-examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "HL7 v2 Rust Examples"
license.workspace = true
publish = false

[dependencies]
# Core dependencies for examples
hl7v2-core = { version = "1.2.0", path = "crates/hl7v2-core", features = ["network", "stream"] }
hl7v2-parser = { version = "1.2.0", path = "crates/hl7v2-parser" }
hl7v2-model = { version = "1.2.0", path = "crates/hl7v2-model" }
hl7v2-mllp = { version = "1.2.0", path = "crates/hl7v2-mllp" }
hl7v2-batch = { version = "1.2.0", path = "crates/hl7v2-batch" }
hl7v2-stream = { version = "1.2.0", path = "crates/hl7v2-stream" }
hl7v2-validation = { version = "1.2.0", path = "crates/hl7v2-validation" }
hl7v2-prof = { version = "1.2.0", path = "crates/hl7v2-prof" }
hl7v2-ack = { version = "1.2.0", path = "crates/hl7v2-ack" }
hl7v2-template = { version = "1.2.0", path = "crates/hl7v2-template" }
hl7v2-network = { version = "1.2.0", path = "crates/hl7v2-network" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
regex = { workspace = true }
rand = { workspace = true }

# Example binaries
[[example]]
name = "parsing_basics"
path = "examples/parsing_basics.rs"

[[example]]
name = "message_building"
path = "examples/message_building.rs"

[[example]]
name = "mllp_client"
path = "examples/mllp_client.rs"

[[example]]
name = "validation_basics"
path = "examples/validation_basics.rs"

[[example]]
name = "batch_processing"
path = "examples/batch_processing.rs"

[[example]]
name = "streaming_parser"
path = "examples/streaming_parser.rs"

[[example]]
name = "template_generation"
path = "examples/template_generation.rs"

[[example]]
name = "ack_generation"
path = "examples/ack_generation.rs"