[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Development automation tasks"
license.workspace = true
publish = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
