[package]
readme = "README.md"
name = "hl7v2-ack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "HL7 v2 ACK (Acknowledgment) message generation"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hl7v2-core = { version = "1.2.0", path = "../hl7v2-core" }
chrono = { version = "0.4.44", features = ["serde", "std", "clock"], default-features = false }

[dev-dependencies]
hl7v2-test-utils = { version = "1.2.0", path = "../hl7v2-test-utils" }
hl7v2-writer = { version = "1.2.0", path = "../hl7v2-writer" }
proptest = "1.6"

