[package]
readme = "README.md"
name = "hl7v2-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Benchmarks for hl7v2 crates"
license.workspace = true
publish = false
repository.workspace = true
keywords = ["hl7", "healthcare", "benchmarking", "performance"]
categories = ["development-tools", "parsing"]

[dependencies]
# Core dependencies
hl7v2-core = { version = "1.2.0", path = "../hl7v2-core" }
hl7v2-escape = { version = "1.2.0", path = "../hl7v2-escape" }
hl7v2-mllp = { version = "1.2.0", path = "../hl7v2-mllp" }
hl7v2-model = { version = "1.2.0", path = "../hl7v2-model" }
hl7v2-normalize = { version = "1.2.0", path = "../hl7v2-normalize" }
hl7v2-parser = { version = "1.2.0", path = "../hl7v2-parser" }
hl7v2-writer = { version = "1.2.0", path = "../hl7v2-writer" }

# New benchmark dependencies
hl7v2-batch = { version = "1.2.0", path = "../hl7v2-batch" }
hl7v2-json = { version = "1.2.0", path = "../hl7v2-json" }
hl7v2-network = { version = "1.2.0", path = "../hl7v2-network" }
hl7v2-template = { version = "1.2.0", path = "../hl7v2-template" }
hl7v2-template-values = { version = "1.2.0", path = "../hl7v2-template-values" }
hl7v2-validation = { version = "1.2.0", path = "../hl7v2-validation" }

# Async runtime for network benchmarks
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time", "net", "io-util", "sync"] }
futures = "0.3.32"

# Serialization
serde_json = { workspace = true }

# Random number generation for template benchmarks
rand = "0.10.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }

# Benchmark definitions
[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "mllp"
harness = false

[[bench]]
name = "escape"
harness = false

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "validation"
harness = false

[[bench]]
name = "batch"
harness = false

[[bench]]
name = "json"
harness = false

[[bench]]
name = "network"
harness = false

[[bench]]
name = "template"
harness = false

