[package]
name = "hl7v2-cli"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
hl7v2-core = { path = "../hl7v2-core" }
hl7v2-prof = { path = "../hl7v2-prof" }
hl7v2-gen = { path = "../hl7v2-gen" }