[package]
name = "hl7v2-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
hl7v2-core = { path = "../hl7v2-core" }
hl7v2-prof = { path = "../hl7v2-prof" }
hl7v2-gen = { path = "../hl7v2-gen" }
hl7v2-server = { path = "../hl7v2-server" }
sysinfo = "0.38.2"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
hl7v2-stream = { version = "0.1.0", path = "../hl7v2-stream" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.19"
hl7v2-test-utils = { path = "../hl7v2-test-utils" }
cucumber = { version = "0.22", default-features = false, features = ["macros"] }
futures = "0.3"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[test]]
name = "bdd_tests"
path = "tests/bdd_tests.rs"
harness = false
