[package]
name = "hl7v2-core"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
network = ["tokio", "tokio-util", "rustls", "tokio-rustls", "bytes", "futures"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.0", features = ["net", "io-util", "time", "macros", "rt", "sync"], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
bytes = { version = "1.0", optional = true }
futures = { version = "0.3", optional = true }
rustls = { version = "0.23", optional = true }
tokio-rustls = { version = "0.26", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "mllp"
harness = false

[[bench]]
name = "escape"
harness = false

[[bench]]
name = "memory"
harness = false