[package]
readme = "README.md"
name = "hl7v2-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "High-level API and core functionality for hl7v2-rs."
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
network = ["dep:hl7v2-network"]
stream = ["dep:hl7v2-stream"]

[dependencies]
# Re-export from microcrates
hl7v2-model = { path = "../hl7v2-model" }
hl7v2-escape = { path = "../hl7v2-escape" }
hl7v2-mllp = { path = "../hl7v2-mllp" }
hl7v2-parser = { path = "../hl7v2-parser" }
hl7v2-writer = { path = "../hl7v2-writer" }
hl7v2-normalize = { path = "../hl7v2-normalize" }

# Optional network module (heavy async dependencies moved to hl7v2-network crate)
hl7v2-network = { path = "../hl7v2-network", optional = true }

# Optional streaming parser module
hl7v2-stream = { path = "../hl7v2-stream", optional = true }

# Core dependencies
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
cucumber = "0.22.1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[test]]
name = "bdd_tests"
harness = false

