[package]
readme = "README.md"
name = "hl7v2-datatype"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "HL7 v2 data type validation"
license.workspace = true
repository.workspace = true
keywords = ["hl7", "healthcare", "datatype", "validation"]
categories = ["parser-implementations", "encoding"]

[dependencies]
regex = "1.0"
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde", "std", "clock"], default-features = false }
hl7v2-datetime = { path = "../hl7v2-datetime" }

[dev-dependencies]
proptest = "1.6"

