[package]
readme = "README.md"
name = "hl7v2-e2e-tests"
version.workspace = true
edition.workspace = true
description = "End-to-end tests for hl7v2-rs workspace"
license.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false
repository.workspace = true

[dependencies]
# Local crates - full system integration
hl7v2-core = { path = "../hl7v2-core", features = ["network"] }
hl7v2-parser = { path = "../hl7v2-parser" }
hl7v2-writer = { path = "../hl7v2-writer" }
hl7v2-ack = { path = "../hl7v2-ack" }
hl7v2-validation = { path = "../hl7v2-validation" }
hl7v2-prof = { path = "../hl7v2-prof" }
hl7v2-test-utils = { path = "../hl7v2-test-utils" }
hl7v2-mllp = { path = "../hl7v2-mllp" }
hl7v2-network = { path = "../hl7v2-network" }
hl7v2-server = { path = "../hl7v2-server" }

# Async runtime
tokio = { workspace = true, features = ["full", "test-util"] }

# HTTP client for server API tests
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = "0.10.0"

# HTTP / Web server
axum = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true }
http-body-util = "0.1"

# Bytes handling
bytes = "1.10"

# CLI testing
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.19"

# Assertions
pretty_assertions = "1.4"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Misc
once_cell = "1.21"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

