[package]
name = "hl7v2-escape"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "HL7 v2 escape sequence handling"
license.workspace = true
repository.workspace = true
keywords = ["hl7", "healthcare", "escape", "encoding"]
categories = ["encoding", "parser-implementations"]

[dependencies]
hl7v2-model = { path = "../hl7v2-model" }

[dev-dependencies]
hl7v2-test-utils = { path = "../hl7v2-test-utils" }
proptest = "1.4"