[package]
readme = "README.md"
name = "hl7v2-escape"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "HL7 v2 escape sequence handling"
license.workspace = true
repository.workspace = true
keywords = ["hl7", "healthcare", "escape", "encoding"]
categories = ["encoding", "parser-implementations"]

[dependencies]
hl7v2-model = { version = "1.2.0", path = "../hl7v2-model" }

[dev-dependencies]
hl7v2-test-utils = { version = "1.2.0", path = "../hl7v2-test-utils" }
proptest = "1.6"
