[package]
name = "hl7v2-gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Use microcrates directly for finer-grained dependencies
hl7v2-model = { path = "../hl7v2-model" }
hl7v2-writer = { path = "../hl7v2-writer" }
# Keep hl7v2-core for backward compatibility
hl7v2-core = { path = "../hl7v2-core" }
# ACK generation is now in its own crate
hl7v2-ack = { path = "../hl7v2-ack" }
# Faker functionality is now in its own crate
hl7v2-faker = { path = "../hl7v2-faker" }
# Template functionality is now in its own crate
hl7v2-template = { path = "../hl7v2-template" }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }