[package]
readme = "README.md"
name = "hl7v2-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "HL7 v2 MLLP network client and server (TCP/TLS)"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories = ["network-programming", "asynchronous"]

[dependencies]
# Core HL7v2 dependencies
hl7v2-model = { path = "../hl7v2-model" }
hl7v2-parser = { path = "../hl7v2-parser" }
hl7v2-writer = { path = "../hl7v2-writer" }

# Async runtime and networking
tokio = { workspace = true, features = ["net", "io-util", "time", "macros", "rt", "sync"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
bytes = "1.11.1"
futures = "0.3.32"

# Optional TLS support
rustls = { version = "0.23.36", optional = true }
tokio-rustls = { version = "0.26.4", optional = true }

[features]
default = []
tls = ["rustls", "tokio-rustls"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net", "io-util"] }
hl7v2-test-utils = { path = "../hl7v2-test-utils" }
proptest = "1.6"
tokio-test = "0.4"

