[package]
name = "hl7v2-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "HL7 v2 message parser"
license.workspace = true
repository.workspace = true
keywords = ["hl7", "healthcare", "parser"]
categories = ["parser-implementations", "encoding"]

[dependencies]
hl7v2-model = { path = "../hl7v2-model" }
hl7v2-escape = { path = "../hl7v2-escape" }
hl7v2-mllp = { path = "../hl7v2-mllp" }