[package]
readme = "README.md"
name = "hl7v2-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "HL7 v2 message parser"
license.workspace = true
repository.workspace = true
keywords = ["hl7", "healthcare", "parser"]
categories = ["parser-implementations", "encoding"]

[dependencies]
hl7v2-model = { version = "1.2.0", path = "../hl7v2-model" }
hl7v2-escape = { version = "1.2.0", path = "../hl7v2-escape" }
hl7v2-mllp = { version = "1.2.0", path = "../hl7v2-mllp" }
hl7v2-query = { version = "1.2.0", path = "../hl7v2-query" }

[dev-dependencies]
hl7v2-test-utils = { path = "../hl7v2-test-utils" }
hl7v2-writer = { path = "../hl7v2-writer" }
proptest = "1.6"
insta = { version = "1.42", features = ["yaml", "json", "redactions"] }
pretty_assertions = "1.4"
assert_matches = "1.5"

[features]
default = []
