[package]
name = "hl7v2-path"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "HL7 v2 field path parsing and resolution"
license.workspace = true
repository.workspace = true
keywords = ["hl7", "healthcare", "path", "field", "access"]
categories = ["parser-implementations"]

[dependencies]
thiserror = { workspace = true }