[package]
name = "hl7v2-prof"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Use microcrates directly for finer-grained dependencies
hl7v2-model = { path = "../hl7v2-model" }
hl7v2-parser = { path = "../hl7v2-parser" }
# Keep hl7v2-core for backward compatibility
hl7v2-core = { path = "../hl7v2-core" }
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9"
regex = "1.0"
chrono = { version = "0.4", features = ["serde", "std", "clock"], default-features = false }