[package]
name = "hl7v2-prof"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Use microcrates directly for finer-grained dependencies
hl7v2-model = { path = "../hl7v2-model" }
hl7v2-parser = { path = "../hl7v2-parser" }
# Keep hl7v2-core for backward compatibility
hl7v2-core = { path = "../hl7v2-core" }
# Validation crate for reusable validation logic
hl7v2-validation = { path = "../hl7v2-validation" }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
regex = "1.12.3"
chrono = { version = "0.4.44", features = ["serde", "std", "clock"], default-features = false }