[package]
readme = "README.md"
name = "hl7v2-prof"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "HL7 v2 message profile and conformance processing."
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Use microcrates directly for finer-grained dependencies
hl7v2-model = { path = "../hl7v2-model" }
hl7v2-parser = { path = "../hl7v2-parser" }
# Keep hl7v2-core for backward compatibility
hl7v2-core = { path = "../hl7v2-core" }
# Validation crate for reusable validation logic
hl7v2-validation = { path = "../hl7v2-validation" }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
regex = "1.12.3"
chrono = { version = "0.4.44", features = ["serde", "std", "clock"], default-features = false }
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["rt", "macros", "time", "fs"] }

# HTTP client for remote profile loading
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }

# LRU cache for profile caching
lru = "0.16"

# Async synchronization primitives
async-lock = "3.4"

[dev-dependencies]
tempfile = "3.26.0"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "fs"] }
wiremock = "0.6"
proptest = "1.6"
