[package]
name = "hl7v2-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "HL7 v2 path-based field access and query functionality"
license.workspace = true
repository.workspace = true
keywords = ["hl7", "healthcare", "query", "path"]
categories = ["parser-implementations", "encoding"]

[dependencies]
hl7v2-model = { path = "../hl7v2-model" }

[dev-dependencies]
proptest = "1.6"
hl7v2-parser = { path = "../hl7v2-parser" }
